<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="36dp">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:text="Введите PIN-код" />

    <LinearLayout
        android:id="@+id/pinDotsContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="75dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/dot1"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_margin="5dp"
            android:contentDescription="@string/dot_cd"
            android:src="@drawable/ic_dot_empty" />

        <ImageView
            android:id="@+id/dot2"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_margin="5dp"
            android:contentDescription="@string/dot_cd"
            android:src="@drawable/ic_dot_empty" />

        <ImageView
            android:id="@+id/dot3"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_margin="5dp"
            android:contentDescription="@string/dot_cd"
            android:src="@drawable/ic_dot_empty" />

        <ImageView
            android:id="@+id/dot4"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_margin="5dp"
            android:contentDescription="@string/dot_cd"
            android:src="@drawable/ic_dot_empty" />
    </LinearLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:columnCount="3"
        android:rowCount="4">

        <Button
            android:id="@+id/button1"
            style="@style/PinButtonStyle"
            android:text="@string/button_1_text" />

        <Button
            android:id="@+id/button2"
            style="@style/PinButtonStyle"
            android:text="@string/button_2_text" />

        <Button
            android:id="@+id/button3"
            style="@style/PinButtonStyle"
            android:text="@string/button_3_text" />

        <Button
            android:id="@+id/button4"
            style="@style/PinButtonStyle"
            android:text="@string/button_4_text" />

        <Button
            android:id="@+id/button5"
            style="@style/PinButtonStyle"
            android:text="@string/button_5_text" />

        <Button
            android:id="@+id/button6"
            style="@style/PinButtonStyle"
            android:text="@string/button_6_text" />

        <Button
            android:id="@+id/button7"
            style="@style/PinButtonStyle"
            android:text="@string/button_7_text" />

        <Button
            android:id="@+id/button8"
            style="@style/PinButtonStyle"
            android:text="@string/button_8_text" />

        <Button
            android:id="@+id/button9"
            style="@style/PinButtonStyle"
            android:text="@string/button_9_text" />

        <Button
            android:id="@+id/buttonClearAll"
            style="@style/PinButtonStyle"
            android:text="@string/button_clear_all" />

        <Button
            android:id="@+id/button0"
            style="@style/PinButtonStyle"
            android:layout_columnSpan="1"
            android:text="@string/button_0_text" />

        <FrameLayout
            android:id="@+id/buttonDeleteOne"
            style="@style/PinButtonStyle">

            <ImageView
                android:id="@+id/deleteImage"
                android:layout_width="46dp"
                android:layout_height="46dp"
                android:contentDescription="@string/button_delete_one_cd"
                android:layout_gravity="center"
                android:src="@drawable/ic_undo_40" />

        </FrameLayout>

    </GridLayout>
</LinearLayout>