<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@color/pink"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <ImageView
            android:id="@+id/buttonBack"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="start"
            android:contentDescription="@string/image_cd"
            android:src="@drawable/ic_arrow_back_24" />

        <TextView
            android:id="@+id/toolbarTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/toolbar_editor_text"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/buttonConfirm"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="end"
            android:contentDescription="@string/image_cd"
            android:src="@drawable/ic_done_24"
            android:layout_marginEnd="16dp"/>
    </androidx.appcompat.widget.Toolbar>

    <EditText
        android:id="@+id/editTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/etTitle"
        android:inputType="textCapWords"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:gravity="top"
        android:hint="@string/etDescription"
        android:inputType="textMultiLine"
        android:minLines="1"
        android:autofillHints="@string/etDescription"
        android:maxLines="5"
        android:scrollbars="vertical"
        android:overScrollMode="ifContentScrolls"
        android:textSize="16sp" />

</LinearLayout>